finalizando segundo gráfico 2/2

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -24,6 +24,7 @@
                 <a href="./sobreORV.html">Sobre ORV</a>
                 </div>
                 <a href="./blog.html">Feed</a>
+                <a href="./estatisticas.html">Estatísticas</a>
             </div>
 
             <!-- login e cadastro -->
