--- a/public/sobreORV.html
+++ b/public/sobreORV.html
@@ -25,6 +25,7 @@
                 <img src="./imagens/star.png" alt="" style="height: 20px;">
             </div>
             <a href="./blog.html">Feed</a>
+            <a href="./estatisticas.html">Estatísticas</a>
         </div>
 
         <!-- login e cadastro -->
@@ -103,38 +104,28 @@
                     <!-- ----------------------------- -->
                     <div class="subTextsBox">
                         <h3 style="display: flex; justify-content: center;">Constelações</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus sapiente veritatis,
-                            provident et exercitationem doloribus, rem ullam repellendus minus, earum quo delectus
-                            corporis eaque cumque beatae autem minima facilis illo!</p>
+                        <p>as Constelações são entidades poderosas e misteriosas que desempenham um papel fundamental no mundo do apocalipse descrito pela história. Elas são, essencialmente, seres que observam os eventos do mundo e interagem com os humanos e suas histórias de diversas maneiras.</p>
                     </div>
                     <!-- ----------------------------- -->
                     <div class="subTextsBox">
                         <h3 style="display: flex; justify-content: center;">Dokkaebis</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus sapiente veritatis,
-                            provident et exercitationem doloribus, rem ullam repellendus minus, earum quo delectus
-                            corporis eaque cumque beatae autem minima facilis illo!</p>
+                        <p>Criaturas sobrenaturais do folclore coreano, que usam seus poderes para interagir com os humanos, seja jogando truques sobre eles ou ajudando-os. Em ORV, eles são como "administradores" ou "gerentes" que supervisionam o desenvolvimento dos cenários e eventos dentro da história.</p>
                     </div>
                 </div>
                 <div class="subTexts">
                     <div class="subTextsBox">
-                        <h3 style="display: flex; justify-content: center;">Demônios</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus sapiente veritatis,
-                            provident et exercitationem doloribus, rem ullam repellendus minus, earum quo delectus
-                            corporis eaque cumque beatae autem minima facilis illo!</p>
+                        <h3 style="display: flex; justify-content: center;">Cenários</h3>
+                        <p>cenários são situações ou eventos criados pelas Constelações ou Dokkaebis dentro do mundo do apocalipse. Esses cenários funcionam como uma espécie de "jogo" ou "missão" que os personagens devem enfrentar para sobreviver ou ganhar recompensas. Cada cenário tem objetivos específicos, que variam de simples tarefas a desafios extremamente difíceis, e geralmente estão ligados ao crescimento pessoal e ao desenvolvimento de habilidades dos personagens.</p>
                     </div>
                     <!-- ----------------------------- -->
                     <div class="subTextsBox">
                         <h3 style="display: flex; justify-content: center;">Deuses de Fora</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus sapiente veritatis,
-                            provident et exercitationem doloribus, rem ullam repellendus minus, earum quo delectus
-                            corporis eaque cumque beatae autem minima facilis illo!</p>
+                        <p>são entidades extremamente poderosas e misteriosas, que vêm de fora do mundo da história principal e dos eventos relacionados ao apocalipse. Eles são seres de grande poder, superiores tanto às Constelações quanto aos Dokkaebis, e possuem suas próprias intenções e objetivos, muitas vezes muito além da compreensão dos personagens humanos.</p>
                     </div>
                     <!-- ----------------------------- -->
                     <div class="subTextsBox">
                         <h3 style="display: flex; justify-content: center;">Nébulas</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus sapiente veritatis,
-                            provident et exercitationem doloribus, rem ullam repellendus minus, earum quo delectus
-                            corporis eaque cumque beatae autem minima facilis illo!</p>
+                        <p>Uma forma específica de Constelação ou um tipo de entidade que atua como uma observadora ou uma “fórmula” dentro do universo do apocalipse. Elas são representadas como entidades com grande poder que influenciam os cenários e eventos, mas com um foco maior na coleta e distribuição de pontos ou "investimentos" em certos personagens ou ações dentro da história. </p>
                     </div>
                 </div>
             </div>
@@ -204,18 +195,11 @@
         <div class="infoTextBox">
             <h2>Kim Dokja</h2>
             <p>
-                Personagem principal de ORV, e a única pessoa do mundo que leu TWSA até o final. Ele é uma pessoa
-                calculista e autruista, sempre tendo um plano maluco para colocar em ação. Mesmo assim, ele continua
-                sendo um pouco patético. Seu maior objetivo em ORV é chegar ao último cenário junto com YJH, para assim,
-                salvar o mundo, e conseguir um final cujo TWSA não o disponibilizou (ou seja, um final feliz).
+                Personagem principal de ORV, e a única pessoa do mundo que leu TWSA até o final. Dokja é uma pessoa calculista e altruísta, caracterizada por sua habilidade de criar planos engenhosos, muitas vezes ousados, para enfrentar os desafios que encontra. Apesar de sua inteligência e resiliência, ele não é retratado como infalível, mantendo um lado humano e, às vezes, até patético. Seu objetivo principal em ORV é alcançar o último cenário ao lado de Yoo Joonghyuk, o protagonista de TWSA, com a esperança de salvar o mundo e criar um final alternativo – um desfecho feliz que a obra original não forneceu
                 <br> <br> 
-                Dokja é humano. Ele não é perfeito. Ele não é todo poderoso. No entanto, ele nunca se desvia do seu
-                caminho. A tenacidade, ou seja, o ato de não desistir, é o maior trunfo da humanidade, depois de se
-                adaptar de acordo com uma situação. E é por isso que eu amo Dokja.
+                Kim Dokja é notavelmente humano, com falhas e limitações que reforçam sua autenticidade como personagem. Ele não possui poderes absolutos, mas sua determinação inabalável o diferencia. Sua tenacidade, a habilidade de persistir diante das adversidades, é apresentada como a essência de sua força e um reflexo das maiores qualidades da humanidade: a capacidade de se adaptar e lutar pelo que acredita. Essa característica o torna admirável, pois mesmo em situações desesperadoras, Dokja se recusa a desviar-se de seu caminho.
                 <br> <br> 
-                Ele é obsecado por YJH, em um nível bizarro. Toda a história de ORV é sobre a relação de KDJ com TWSA
-                como um leitor, mostrando o que o livro significou para ele, como essa história afetou sua relação com
-                outras pessoas.
+                Um aspecto central de ORV é a relação de Dokja com TWSA e, por extensão, com Yoo Joonghyuk. Sua obsessão por YJH transcende o simples fascínio por um personagem de ficção, tornando-se um vínculo profundo e quase inexplicável. A narrativa de ORV explora como TWSA impactou a vida de Kim Dokja, moldando não apenas sua visão de mundo, mas também suas relações interpessoais..
             </p>
         </div>
         <div class="infoImg">
@@ -236,8 +220,7 @@
                 qualquer coisa desse errado, ele só “voltaria no tempo para corrigir”. Isso, no entanto, causa um
                 paradoxo: e quanto ao universo que o YJH deixou para trás, o que será dele sem o protagonista?
                 <br> <br> 
-                Seu objetivo seria o mesmo que o do KDJ: salvar o mundo do apocalipse. Por isso, YJH sempre busca
-                fortalecer seus poderes.
+                Seu objetivo central é salvar o mundo do apocalipse, compartilhando esse propósito com Kim Dokja. Para alcançar isso, Yoo Joonghyuk dedica-se incansavelmente ao aprimoramento de seus poderes, preparando-se para enfrentar os desafios dos cenários futuros. Apesar de sua aparente dureza, sua evolução como personagem revela nuances de vulnerabilidade e crescimento, especialmente ao interagir com Kim Dokja e os outros companheiros de sua jornada. Yoo Joonghyuk é mais do que um herói trágico; ele é uma exploração de como o peso da responsabilidade e do sofrimento molda o espírito humano.
             </p>
         </div>
         <div class="infoImg2">
@@ -248,8 +231,9 @@
         <div class="infoTextBox">
             <h2>Han Sooyoung</h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit ex, quis veritatis id ut vel, saepe
-                recusandae quo cumque qui blanditiis eum iusto nihil delectus magnam. Hic consequuntur laudantium totam.
+                Han Sooyoung é uma personagem muito bem construída, conhecida por sua complexidade, carisma e papel crucial na narrativa. Ela é escritora e a criadora de TWSA, a história que serve como o universo central de ORV. Han Sooyoung desempenha um papel multifacetado, atuando tanto como aliada quanto como rival do protagonista, Kim Dokja, o único leitor fiel de sua obra. Sua personalidade é marcada por uma mistura de sarcasmo, inteligência e um senso de humor ácido, o que a torna ao mesmo tempo intrigante e imprevisível. Apesar de suas falhas e ações que às vezes parecem egoístas, ela demonstra uma grande profundidade emocional e lealdade.
+                <br> <br> 
+                Han Sooyoung é um exemplo de personagem que transcende os estereótipos de "aliada" ou "antagonista". Sua história explora os dilemas morais e as consequências de ser uma criadora em um mundo onde a linha entre ficção e realidade é tênue. Ela é alguém que luta para encontrar significado em suas ações, equilibrando sua independência feroz com sua crescente empatia pelos outros. Seu crescimento ao longo da narrativa é um dos elementos que enriquecem a trama de ORV, tornando-a uma das personagens mais memoráveis e queridas pelos fãs.
             </p>
         </div>
         <div class="infoImg3">
@@ -261,12 +245,9 @@
             <h2>Lee Hyunsung</h2>
             <p>
                 Originalmente, em TWSA, foi o companheiro principal de YJH, mas Dokja o “rouba”, colocando-o em seu
-                grupo. Ele é um ex-militar, mas que ainda se gruda aos valores que construiu durante essa época. Ele não
-                é uma pessoa muito confiante, tendo uma personalidade tímida e insegura, fazendo com que ele se apoie
-                demais no KDJ para qualquer direcionamento.
+                grupo. Ele é um ex-soldado com uma moralidade forte, sendo caracterizado por sua lealdade, coragem e um senso inabalável de justiça. Sua experiência militar o tornou fisicamente resistente e habilidoso em combate, além de mentalmente preparado para situações de alto risco. No entanto, ele não é apenas um guerreiro; sua personalidade gentil e altruísta o torna uma figura de apoio crucial para o grupo.
                 <br> <br> 
-                Uma pessoa boa de coração, sincera e gentil. Ele também é chamado de “Parede se Aço”, sendo sua
-                habilidade a transformação de seu corpo em aço, tendo assim um papel de Tank/Defesa no grupo.
+                Ao longo da narrativa, Lee Hyunsung evolui como um personagem que equilibra força e compaixão. Sua relação com Kim Dokja é marcada por respeito e amizade, sendo um dos membros mais confiáveis do grupo. Ele se destaca como um pilar de estabilidade, frequentemente oferecendo suporte emocional e físico em momentos críticos. Sua jornada em ORV reflete o dilema universal de manter a humanidade e os valores pessoais diante do caos e da destruição.
             </p>
         </div>
         <div class="infoImg4">
@@ -294,11 +275,11 @@
         <div class="infoTextBox">
             <h2>Yoo Sangah</h2>
             <p>
-                Yoo Sangah, no início, era parceira de trabalho de KDJ, e nunca sequer teve sua aparição em TWSA. Ela é
-                considerada uma personagem “nova”. Anteriormente, ela se sentia presa pela expectativa de ser uma mulher
-                de sucesso na sociedade, sempre querendo viver sua vida independentemente. 
+                Yoo Sangah é uma das personagens principais de ORV, e uma das primeiras aliadas de Kim Dokja no início da história. Ela é apresentada inicialmente como uma colega de trabalho de Dokja, destacando-se por sua aparência elegante, personalidade educada e comportamento gentil. Apesar de sua aparente fragilidade no início do apocalipse, Yoo Sangah demonstra uma resiliência impressionante e uma inteligência emocional afiada, características que a tornam indispensável para o grupo ao longo da narrativa.
                 <br> <br> 
                 Ela é madura, gentil, trabalhadora e responsável, sendo uma pessoa que sempre escolhe fazer as coisas certas e defender morais mesmo quando o mundo está pressionando ela a quebrá-las. No entanto, por trás dessa forte mulher, se encontra um quieto, mas forte ressentimento e uma saudade ainda maior do passado.
+                <br> <br> 
+                Sangah é uma mediadora natural, frequentemente atuando como a voz da razão em situações tensas. Sua habilidade de manter a calma e sua empatia a permitem construir conexões significativas com outros personagens, mesmo em cenários difíceis. Além disso, conforme a história progride, ela revela um lado surpreendentemente estratégico e pragmático, aprendendo rapidamente a se adaptar às circunstâncias mortais do mundo de TWSA.
             </p>
         </div>
         <div class="infoImg6">
@@ -326,11 +307,12 @@
         <div class="infoTextBox">
             <h2>Lee Gilyoung</h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit ex, quis veritatis id ut vel, saepe
-                recusandae quo cumque qui blanditiis eum iusto nihil delectus magnam. Hic consequuntur laudantium totam.
+                Lee Gilyoung desempenha um papel importante como membro do grupo de Kim Dokja. Ele é apresentado como uma criança inteligente e precoce, que, apesar de sua idade, demonstra notável maturidade e adaptabilidade em um mundo devastado pelo apocalipse. Sua habilidade única de se comunicar com insetos e monstros, derivada de seu papel como um Beast Tamer, torna-o um ativo valioso para a sobrevivência do grupo, permitindo estratégias que seriam impossíveis de outra forma.
+                <br><br>
+                Ao longo da história, Lee Gilyoung cresce tanto em força quanto em caráter. Ele enfrenta as dificuldades de um mundo implacável com coragem e engenhosidade, mas sem perder seu senso de humanidade. Sua jornada em ORV é um testemunho de como a vulnerabilidade de uma criança pode coexistir com uma força inata, destacando sua importância não apenas como um aliado, mas também como um símbolo de esperança e resistência.
             </p>
         </div>
-        <div class="infoImg8">
+        <div class="infoImg9">
         </div>
     </div>
     <!-- ------------------------------------------------------------------------------------------------------------------ -->
@@ -338,11 +320,12 @@
         <div class="infoTextBox">
             <h2>Shin Yooshung</h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit ex, quis veritatis id ut vel, saepe
-                recusandae quo cumque qui blanditiis eum iusto nihil delectus magnam. Hic consequuntur laudantium totam.
+                Shin Yoosung tem uma história tocante e um papel central no desenvolvimento emocional e estratégico do grupo de Kim Dokja. Apresentada inicialmente como uma jovem garota vulnerável no meio do caos apocalíptico, Yoosung rapidamente se torna uma figura complexa e multifacetada. Ela é uma regressor secundária, tendo vivido inúmeras vidas traumáticas em diferentes rounds dentro da história de "Three Ways to Survive in a Ruined World" (TWSA). Isso a torna experiente e habilidosa além de sua idade, mas também a deixa marcada por dores emocionais profundas.
+                <br><br>
+                Yoosung possui uma personalidade forte e determinada. Apesar de sua aparência jovem e inocente, ela demonstra uma resiliência notável e uma disposição feroz para proteger aqueles com quem se importa. Sua relação com Kim Dokja é especialmente significativa; ela o vê como uma figura protetora e, em muitos sentidos, como uma âncora emocional. Ao mesmo tempo, Yoosung é uma combatente formidável, treinada por Yoo Joonghyuk em suas vidas passadas, o que a torna incrivelmente competente em combate e táticas de sobrevivência.
             </p>
         </div>
-        <div class="infoImg9">
+        <div class="infoImg8">
         </div>
     </div>
     <!-- ------------------------------------------------------------------------------------------------------------------ -->
