--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
                 </div>
                     <a href="./sobreORV.html">Sobre ORV</a>
                     <a href="./blog.html">Feed</a>
+                    <a href="./estatisticas.html">Estatísticas</a>
             </div>
 
             <!-- login e cadastro -->
