--- a/public/login.html
+++ b/public/login.html
@@ -21,6 +21,7 @@
             <a href="./index.html">Home</a>
             <a href="./sobreORV.html">Sobre ORV</a>
             <a href="./blog.html">Feed</a>
+            <a href="./estatisticas.html">Estatísticas</a>
         </div>
 
             <!-- login e cadastro -->
