--- a/public/dashboard/contaBlog.html
+++ b/public/dashboard/contaBlog.html
@@ -41,6 +41,11 @@
         </div>
     </div>
 
+    <div class="banner">
+        <div class="container">
+        </div>
+    </div>
+
     <div class="box1">
         <div class="Feed">
             <div id="alerta"></div>
